maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:19: error: ';' expected but 'else' found.
    } else {
      ^